[package]
name = "marquee"
version = "1.1.0"
edition = "2021"
authors = ["funnyboy_roks <funnyboyroks@gmail.com>"]
description = "Convert stdin into a \"marquee\" style output"
license = "Apache-2.0"
repository = "https://github.com/funnyboy-roks/marquee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", default-features = true, features = ["derive"] }
serde = { version = "1.0.152", default-features = true, features = ["derive"] }
serde_json = "1.0.94"

#[profile.release]
#debug = true
